--- a/main.tex
+++ b/main.tex
@@ -21,1080 +21,10 @@
 
 \mainmatter
 记录本书的原因是因为我觉得自己的数学分析实在太烂了。因此我决定使用费曼学习法。这是一个链式反应，在我学习随机过程的时候，我发现自己的概率论太差了，而当我学习概率论的时候，我又发现我的测度论太差了，而我学习测度论的时候，我最终发现，我差的是数学分析。而这个最初始的问题是我并没有系统地学过数学分析。而在学习数学分析的过程中，我发现我对好多概念并不明晰，这使得学习的进度缓慢，并且经常容易在概念上卡壳，而卡壳结束后又很快忘记。因此，为了能够更好地记住，我决定使用费曼学习法。在此，我记录下我学习数学分析的过程。
+
 \input{chapter1}
 \input{chapter2}
+\input{chapter3}
+\input{chapter4}
 
-% 陈老视频22
-\chapter{函数极限与连续函数}
-函数极限
-
-\[ \funclim{x}{0}{\frac{\sin x}{x}} = 1 \]
-\begin{definition}
-    $y = f(x)$在$O(x_0, \rho) \backslash \collect{x_0}$上有定义, 如果存在一个数A, 使得对任意给定的$\epsilon > 0$, 可以找到$\delta > 0$, 当$0 < \left| x - x_0 \right| < \delta$时, 成立$\left| f(x) - A\right| < \epsilon$, 则称A是$f(x)$在$x_0$点的极限，记为$\lim_{x \to x_0} f(x) = A$或者$f(x) \to A (x \to x_0)$。如果不存在满足上述性质的A, 则称$f(x)$在$x_0$点极限不存在。
-\end{definition}
-$O(x_0, \rho) \backslash \collect{x_0}$称为去心邻域。
-
-% 陈老视频23
-\begin{proposition}
-    证明：
-    \[ \funclim{x}{0}{e^x} = 1\]
-\end{proposition}
-\begin{proof}
-
-\end{proof}
-
-\begin{proposition}
-    证明：
-    \[ \funclim{x}{2}{x^2} = 4 \]
-\end{proposition}
-\begin{proof}
-
-\end{proof}
-
-\begin{proposition}
-    证明：
-    \[ \funclim{x}{1}{\frac{x(x-1)}{x^2-1}} = \frac{1}{2} \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-函数极限的性质
-\begin{theorem}[函数极限的唯一性]
-    设A, B都是$f(x)$在$x_0$的极限, 则$A=B$。 
-\end{theorem}
-\begin{proof}
-    证明类似证明数列极限的唯一性
-\end{proof}
-
-\begin{theorem}[函数极限的局部保序性]
-    若$\funclim{x}{x_0}{f(x)} = A, \funclim{x}{x_0}{g(x)} = B, A > B$, 则$\exists \delta > 0$, 当x有$0 < \left| x - x_0 \right| < \delta $时, $f(x) > g(x)$  
-\end{theorem}
-\begin{proof}
-    证明类似证明数列极限的保序性
-\end{proof}
-
-\begin{lemma}
-    $\funclim{x}{x_0}{f(x)} = A \neq 0$, 则$\exists \delta > 0$, $\forall x ( 0 < \left| x - x_0\right| < \delta)$, $\left| f(x) \right| > \frac{\left| A \right|}{2}$。
-\end{lemma}
-\begin{proof}
-    请使用局部保序性证明
-\end{proof}
-
-\begin{lemma}
-    假设$\funclim{x}{x_0}{f(x)} = A, \funclim{x}{x_0}{g(x)} = B$, 若$\exists \delta > 0, \forall x (x < \left| x - x_0\right| < \delta)$, 有$f(x) \ge g(x)$, 则$A \ge B$
-\end{lemma}
-\begin{proof}
-
-\end{proof}
-
-% 陈老视频24
-
-\begin{theorem}[函数极限的局部有界性]
-    若$\funclim{x}{x_0}{f(x)} = A$, 则$\exists \delta$, $\forall x(0 < \left| x - x_0 \right| < \delta)$, $m \le f(x) \le M$, m, M为固定实数。
-
-    若$f(x)$在$x_0$有定义, 则在$x$满足$\left| x - x_0 \right| < \delta$的条件下, $\min\{m, f(x)\} \le f(x) \le \max\{M, f(x)\}$。
-\end{theorem}
-\begin{proof}
-    请使用局部保序性证明
-\end{proof}
-
-\begin{theorem}[函数极限的夹逼性定理]
-    若$\exists r > 0$, $\forall x(x < \left| x - x_0 \right| < r)$, 有$g(x) \le f(x) \le h(x)$, 且$\funclim{x}{x_0}{g(x)} = \funclim{x}{x_0}{h(x)} = A$, 则$\funclim{x}{x_0}{f(x)} = A$
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    证明: 
-    \[ \funclim{x}{0}{\frac{\sin x}{x}} = 1 \]
-\end{proposition}
-\begin{proof}
-    使用夹逼性证明。
-
-    再用数列逼近证明。
-\end{proof}
-
-\begin{theorem}[函数极限四则运算]
-    假设$\funclim{x}{x_0}{f(x)} = A$, $\funclim{x}{x_0}{g(x)} = B$, 则: 
-    \begin{enumerate}
-        \item $\funclim{x}{x_0}{\alpha f(x) + \beta g(x)} = \alpha A + \beta B$
-        \item $\funclim{x}{x_0}{f(x)g(x)} = AB$
-        \item $\funclim{x}{x_0}{\frac{f(x)}{g(x)}} = \frac{A}{B}(B \neq 0)$
-    \end{enumerate}
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    求:
-    \[ \funclim{x}{0}{\frac{\sin \alpha x}{x}} \]
-    的极限。
-\end{proposition}
-\begin{proof}
-\end{proof}
-
-\begin{proposition}
-    求:
-    \[ \funclim{x}{0}{\frac{\sin \alpha x}{\sin \beta x}} \]
-    的极限。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频25
-\section{函数极限和数列极限的关系}
-\begin{theorem}[否定命题的分析表示]
-    $\collect{x_n}$以$a$为极限: $\forall \epsilon > 0$, $\exists N$, $\forall n > N$, $\left| x_n - a \right| < \epsilon$。
-
-    $\collect{x_n}$不以$a$为极限: $\exists \epsilon > 0$, $\forall N$, $\exists n > N$, $\left| x_n - a \right| \ge \epsilon$
-\end{theorem}
-\begin{theorem}[heine定理]
-    $\funclim{x}{x_0}{f(x)} = A$存在的充分必要条件是: 对于任意的满足$x_n \neq x_0$, $\mylim{n}{x_n} = x_0$的数列$\collect{x_n}$, $\collect{f(x_n)}$收敛于A。
-\end{theorem}
-\begin{proof}
-    {\bf 证明必要性}, 即证明: 
-    
-    若$\funclim{x}{x_0}{f(x)} = A$, 则对于任意的满足$x_n \neq x_0$, $\mylim{n}{x_n} = x_0$的数列$\collect{x_n}$, $\collect{f(x_n)}$收敛于A。
-
-    因为$\funclim{x}{x_0}{f(x)} = A$, 则$\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x ( 0 < \left| x - x_0 \right| < \delta)$, 成立$\left| f(x) - A \right| < \epsilon$。
-
-    又因为对于$\collect{x_n}$, 有$x_n \neq x_0$且$\mylim{n}{x_n} = 0$, 即$\forall \delta > 0$, $\exists N \in \mathbb{N}^+$, $\forall n > N$, 成立$0 < \left| x_n - x_0 \right| < \delta$。
-
-    则$\forall \epsilon > 0$, $\exists \delta > 0$, 对于该$\delta$, $\exists N \in \mathbb{N}^+$, $\forall n > N$, 有$0 < \left| x_n - x_0 \right| < \delta$, 且在该$\delta$下有$\left| f(x_n) - A \right| < \epsilon$。证明完毕。
-
-    {\bf 证明充分性}, 即证明:
-    
-    若对于任意的满足$x_n \neq x_0$, $\mylim{n}{x_n} = x_0$的数列$\collect{x_n}$, $\collect{f(x_n)}$收敛于A, 则$\funclim{x}{x_0}{f(x)} = A$。
-
-    利用反证法, 若$\funclim{x}{x_0}{f(x)} \neq A$, 则$\exists \epsilon_0 > 0$, $\forall \delta > 0$, $\exists x ( 0 < \left| x - x_0 \right| < \delta)$, 使得$\left| f(x) - A \right| \ge \epsilon_0$
-
-    取$\delta_n = \frac{1}{n}, n = 1, 2, 3, \cdots$,则对于$\epsilon_0$,有:
-    \begin{gather*}
-        \exists x_1(0 < \left| x_1 -x_0 \right| < 1), \left| f(x_1) - A \right| \ge \epsilon_0 \\
-        \exists x_2(0 < \left| x_2 -x_0 \right| < \frac{1}{2}), \left| f(x_2) - A \right| \ge \epsilon_0 \\
-        \exists x_3(0 < \left| x_3 -x_0 \right| < \frac{1}{3}), \left| f(x_3) - A \right| \ge \epsilon_0 \\
-        \cdots \cdots
-    \end{gather*}
-    对于数列$\collect{x_n}$, 对于$\epsilon_0$, $\forall n$, $\left| x_n - x_0\right| > \epsilon_0$恒成立。
-
-    即: $\exists \epsilon = \epsilon_0 > 0$, $\forall N \in \mathbb{N}^+$, $\exists n > N$, $\left| f(x_n) - A\right| > \epsilon$。
-    则存在数列$\collect{x_n}$不收敛于A。这与条件矛盾, 则假设不成立。证明完毕。
-
-\end{proof}
-
-\begin{proposition}
-    $f(x) = \sin \frac{1}{x}$在$x_0 = 0$处极限不存在。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{lemma}
-    $\funclim{x}{x_0}{f(x)}$存在并且有限(收敛)的充分必要条件是: 对任意满足$x_n \neq x_0$, $\mylim{n}{x_n} = x_0$的$\collect{x_n}$, $\collect{f(x_n)}$收敛。
-\end{lemma}
-\begin{proof}
-    
-\end{proof}
-
-\section{单侧极限}
-\begin{definition}
-    假设$f(x)$在$(x_0 - \rho, x_0)$有定义, 如果存在B, $\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x(-\delta < x-x_0 < 0)$, 成立$\left| f(x) - B\right| < \epsilon$, 则称B是$f(x)$在$x_0$的左极限, 记为$\funclim{x}{x_0^-}{f(x)} = B(f(x)\to B(x \to x_0^-))$。
-
-    类似地, 假如存在C, $\exists \epsilon > 0$, $\exists \delta > 0$, $\forall x(0 < x - x_0 < \delta )$, 成立$\left| f(x) - C \right| < \epsilon$, 则称C是$f(x)$在$x_0$的右极限, 记为$\funclim{x}{x_0^+}{f(x)} = C(f(x)\to C(x \to x_0^+))$。
-
-    则$\funclim{x}{x_0}{f(x)} = A \Leftrightarrow \funclim{x}{x_0^-}{f(x)} = \funclim{x}{x_0^+}{f(x)} = A$
-\end{definition}
-
-\begin{proposition}
-    \begin{equation*}
-        \mathrm{sign} (x) = \left\{ 
-            \begin{aligned}
-                -1 \quad x < 0 \\
-                0 \quad x = 0 \\
-                1 \quad x > 0 
-            \end{aligned}
-        \right.
-    \end{equation*}
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \begin{equation*}
-        f(x) = \left\{
-            \begin{aligned}
-               \frac{\sin 2x}{x} \quad x < 0 \\
-               2\cos(x^2) \quad x \ge 0 
-            \end{aligned}
-        \right.
-    \end{equation*}
-\end{proposition}
-
-% 陈老视频26
-\section{函数极限定义的扩充}
-可以将自变量$x$的趋向扩充成以下六种:
-\begin{enumerate}
-    \item $x \to x_0$
-    \item $x \to x_0^+$
-    \item $x \to x_0^-$
-    \item $x \to +\infty$
-    \item $x \to -\infty$
-    \item $x \to \infty$
-\end{enumerate}
-而应变量$f(x)$的趋向可以扩充成以下四种:
-\begin{enumerate}
-    \item $f(x) \to A$
-    \item $f(x) \to +\infty$
-    \item $f(x) \to -\infty$
-    \item $x \to \infty$
-\end{enumerate}
-现在加上对应的分析表述, 对于自变量$x$:
-\begin{enumerate}
-    \item $x \to x_0: \exists \delta > 0, \forall x(0 < \left| x - x_0 \right| < \delta)$
-    \item $x \to x_0^+: \exists \delta > 0, \forall x(0 < x - x_0 < \delta)$
-    \item $x \to x_0^-: \exists \delta > 0, \forall x(-\delta < x - x_0 < 0)$
-    \item $x \to +\infty: \exists X > 0, \forall x(x > X)$
-    \item $x \to -\infty: \exists X > 0, \forall x(x < -X)$
-    \item $x \to \infty: \exists X > 0, \forall x(\left| x \right| > X)$
-\end{enumerate}
-对于应变量$f(x)$: 
-\begin{enumerate}
-    \item $f(x) \to A: \forall \epsilon > 0, \cdots,\left| f(x) - A \right| < \epsilon$
-    \item $f(x) \to +\infty: \forall G > 0, \cdots, f(x) > G$
-    \item $f(x) \to -\infty: \forall G > 0, \cdots, f(x) < -G$
-    \item $x \to \infty: \forall G > 0, \cdots, \left| f(x) \right| > G$
-\end{enumerate}
-
-\begin{proposition}
-    写出:
-    \[ \funclim{x}{x_0^+}{f(x)} = \infty \]
-    的分析表述。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    写出:
-    \[ \funclim{x}{+\infty}{f(x)} = A \]
-    的分析表述。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    写出:
-    \[ \funclim{x}{-\infty}{f(x)} = +\infty \]
-    的分析表述。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    证明:
-    \[ \funclim{x}{-\infty}{e^x} = 0\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    证明
-    \[ \funclim{x}{1^-}{\frac{x^2}{x-1}} = -\infty \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-我们讲了函数极限的性质和函数极限的四则运算。讲函数极限的性质的时候是对于收敛函数来讨论的。对于扩充后的函数极限则不一定成立, 特别对于$\infty$。性质要排除$\infty$, 四则运算要排除待定型。
-
-对于扩充后的heine定理应该如何书写:
-$\funclim{x}{+\infty}{f(x)} = A$充分必要条件: 对任意的满足$x_n\to +\infty(n \to \infty)$的数列$\collect{x_n}$,, 成立$\collect{f(x_n)}$收敛于A。
-
-$\funclim{x}{+\infty}{f(x)}$存在且有限的充分必要条件是: 对任意满足$x_n \to +\infty(n \to +\infty)$的数列$\collect{x_n}$, $\collect{f(x_n)}$收敛。
-
-% 陈老视频27
-\begin{proposition}
-    设:
-    \[f(x) = \frac{a_n x^n+a_{n-1}x^{n-1}+\cdots+a_k x^k}{b_m x^m+b_{m-1} x^{m-1}+\cdots+b_j x^j} (a_n, a_k \neq 0, b_m, b_j \neq 0)\]
-    考虑$\funclim{x}{\infty}{f(x)}$和$\funclim{x}{0}{f(x)}$。
-\end{proposition}
-\begin{proof}
-    $x\to \infty$的情况:
-
-    分三种情况讨论:
-    \begin{enumerate}
-        \item $n = m$:
-        \item $n > m$:
-        \item $n < m$:
-    \end{enumerate}
-
-    $x \to 0$的情况:
-
-    分三种情况讨论:
-    \begin{enumerate}
-        \item $k = j$:
-        \item $k > j$:
-        \item $k < j$:
-    \end{enumerate}
-\end{proof}
-
-\begin{proposition}
-    证明:
-    \[ \funclim{x}{\infty}{\left(1+\frac{1}{x}\right)^x} = e\]
-\end{proposition}
-\begin{proof}
-    提示: 夹逼法。
-    同时$\funclim{x}{\infty}{\left(1-\frac{1}{x}\right)^x} = \frac{1}{e}$
-\end{proof}
-
-函数极限的Cauchy收敛原理
-
-回忆以下数列的情况:
-$\mylim{n}{x_n}$收敛$\Longleftrightarrow$ $\forall \epsilon > 0, \exists N, \forall n, m > N, \left| x_n - x_m \right| < \epsilon$。
-
-在函数中, 我们做了拓广, 并不是所有的拓广都有Cauchy收敛原理。
-
-对于函数发散时是没有Cauchy收敛原理的。
-\begin{theorem}[函数极限的Cauchy收敛原理]
-    $\funclim{x}{+\infty}{f(x)}$存在并且有限(收敛)$\Longleftrightarrow$ $\forall \epsilon > 0, \exists X > 0, \forall x', x'' > X, \left| f(x') - f(x'') \right| < \epsilon$ 
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频28
-\section{连续函数}
-分析上讲, $f(x)$在$x_0$点连续: 当$x \to x_0$时, $f(x) \to f(x_0)$。
-\begin{definition}
-    设$f(x)$在$x_0$的某个邻域中有定义, 且成立
-    \[ \funclim{x}{x_0}{f(x)} = f(x_0) \]
-    则称$f(x)$在$x_0$点连续，$x_0$是$f(x)$的连续点。
-
-    符号表述:
-    $\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x(\left| x - x_0 \right| < \delta)$, 成立$\left| f(x) - f(x_0) \right| < \epsilon$。
-\end{definition}
-
-开区间情况:
-\begin{definition}
-    若$f(x)$在$(a, b)$的每一点上都连续, 则称$f(x)$在开区间$(a, b)$上连续。
-\end{definition}
-\begin{proposition}
-    证明:
-    \[ f(x) = \frac{1}{x}\]
-    在$(0, 1)$连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-闭区间情况:
-\begin{definition}
-    若$\funclim{x}{x_0^-}{f(x)} = f(x_0)$, 则称$f(x)$在$x_0$点左连续。
-
-    若$\funclim{x}{x_0^+}{f(x)} = f(x_0)$, 则称$f(x)$在$x_0$点右连续。
-
-    符号表示:
-
-    {\bf 左连续}: $\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x(-\delta < x-x_0 \le 0)$: $\left| f(x) - f(x_0)\right| < \epsilon$。
-
-    {\bf 右连续}: $\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x(0 \le x-x_0 < \delta)$: $\left| f(x) - f(x_0)\right| < \epsilon$。   
-\end{definition}
-
-\begin{definition}
-    $f(x)$在$(a, b)$上连续, 且在a点右连续, 在b点左连续, 则称$f(x)$在闭区间$[a, b]$上连续。
-\end{definition}
-\begin{proposition}
-    证明:
-    \[ f(x) = \sqrt{x(1-x)}\]
-    在$(0, 1)$闭区间上连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-注:关于函数$f(x)$在一个区间里面连续, 整合以上的定义。
-\begin{definition}
-    设$f(x)$定义在某区间X上, 若$\forall x_0 \in X$, 及$\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x \in X(\left|x - x_0 \right|<\delta)$, $\left| f(x) - f(x_0) \right| < \epsilon$。则称$f(x)$在区间X上连续。
-\end{definition}
-\begin{proposition}
-    证明:
-    \[ f(x) = \sin(x)\]
-    在$(-\infty, +\infty)$上连续。
-\end{proposition}
-\begin{proof}
-    同理$f(x) = \cos(x)$在$(-\infty, +\infty)$上连续。
-\end{proof}
-
-% 陈老视频29
-\begin{proposition}
-    证明:
-    \[ f(x) = a^x (a > 0, a \neq 1)\]
-    在$(-\infty, +\infty)$上连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\section{连续函数的四则运算}
-\begin{theorem}
-    有$\funclim{x}{x_0}{f(x)} = f(x_0)$, $\funclim{x}{x_0}{g(x)} = g(x_0)$, 则:
-    \begin{enumerate}
-        \item $\funclim{x}{x_0}{\alpha f(x) + \beta g(x)} = \alpha f(x_0) + \beta g(x_0)$
-        \item $\funclim{x}{x_0}{f(x)g(x)} = f(x_0)g(x_0)$
-        \item $\funclim{x}{x_0}{\frac{f(x)}{g(x)}} = \frac{f(x_0)}{g(x_0)}(g(x_0) \neq 0)$
-    \end{enumerate}
-\end{theorem}
-
-\begin{proposition}
-    求:
-    \[ \funclim{x}{2}{\frac{x^2+\sin x}{3^x+2x}}\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    \[ P_n(x) = a_n x^n + a_{n-1} x^{n-1} + \cdots + a_0\]
-    \[ Q(x) = \frac{a_n x^n + a_{n-1} x^{n-1} + \cdots + a_0}{b_m x^m + b_{m-1} x^{m-1} + \cdots + b_0}\]
-\end{proposition}
-\begin{proof}
-    $f(x) = c, g(x) = x$
-\end{proof}
-
-\begin{proposition}
-    已知$\sin(x)$, $\cos(x)$在$(-\infty, +\infty)$上连续。
-
-    $\tan(x) = \frac{\sin(x)}{\cos(x)}$, 在$\left\{ x\left| x \neq k\pi + \frac{\pi}{2}, k \in \mathbb{Z}\right.\right\}$上连续。
-
-    $\cot(x) = \frac{\cos(x)}{\sin(x)}$, 在$\left\{ x\left| x \neq k\pi, k \in \mathbb{Z}\right.\right\}$上连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\section{不连续点的类型}
-连续的定义:$\funclim{x}{x_0}{f(x)} = f(x_0)$
-
-该定义包含了如下几层意思:
-\begin{enumerate}
-    \item $f(x)$在$x_0$点有定义。
-    \item $\funclim{x}{x_0^+}{f(x)} = f(x_0)$ 
-    \item $\funclim{x}{x_0^-}{f(x)} = f(x_0)$
-\end{enumerate}
-\subsection{第一类不连续点}
-$\funclim{x}{x_0^+}{f(x)} \neq \funclim{x}{x_0^-}{f(x)}$
-\begin{proposition}
-    \begin{equation*}
-        \mathrm{sign} (x) = \left\{ 
-            \begin{aligned}
-                -1 \quad x < 0 \\
-                0 \quad x = 0 \\
-                1 \quad x > 0 
-            \end{aligned}
-        \right.
-    \end{equation*}
-    在$x=0$不连续。
-\end{proposition}
-称第一类不连续点为跳跃点。
-\subsection{第二类不连续点}
-$\funclim{x}{x_0^+}{f(x)}$和$\funclim{x}{x_0^-}{f(x)}$至少有一个不存在。
-\begin{proposition}
-    $f(x) = \sin(\frac{1}{x})$,$x=0$是它的第二类不连续点。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    $f(x) = e^{\frac{1}{x}}$, $x = 0$是它的第二类不连续点。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\subsection{第三类不连续点}
-\begin{equation*}
-    \funclim{x}{x_0^+}{f(x)} = \funclim{x}{x_0^-}{f(x)}\left\{
-    \begin{aligned}
-        & \neq f(x_0) \\
-        & f(x)\text{在}x_0\text{点没定义。} 
-    \end{aligned}
-    \right.
-\end{equation*}
-
-\begin{proposition}
-    $f(x) = x\sin(\frac{1}{x})$, 在$x=0$极限存在, 但是没有定义。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-第三类不连续点称为可去不连续点。
-\begin{proposition}
-    \begin{equation*}
-        \mathrm{D}(x) = \left\{
-            \begin{aligned}
-                &1 \quad x\text{是有理数} \\
-                &0 \quad x\text{是无理数}
-            \end{aligned}
-        \right.
-    \end{equation*}
-    Dirichlet函数属于第二类不连续点。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频30
-\begin{proposition}
-    黎曼(Riemann)函数:
-    \begin{equation*}
-        \mathrm{R}(x) = \left\{
-            \begin{aligned}
-                &0 \quad x\text{是无理数} \\
-                &\frac{1}{p} \quad x=\frac{q}{p}, p \in \mathbb{N}^+, q \in \mathbb{Z}\backslash\{0\}, p,q\text{互质} \\
-                &1 \quad x = 0
-            \end{aligned}
-            \right.
-    \end{equation*}
-    $\forall x_0 \in (-\infty, +\infty)$, $\funclim{x}{x_0}{\mathrm{R}(x)} = 0$。即$\mathrm{R}(x)$在一切无理点连续, 在一切有理点不连续。
-\end{proposition}
-为什么定义0的时候是1? 因为1可以写成$\frac{0}{1}$, 并且Riemann函数有周期性, 为了保持周期性, 因此定义0的时候是1。
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    区间$(a, b)$上的单调函数的不连续点必为第一类。    
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\section{反函数}
-映射: $f: X \to Y$ 为单射, 则$\exists f^{-1}: R_f \to X$。
-
-存在性、连续性、可导性(可导性暂时不讲)
-
-严格单调增加:$\forall x_1 < x_2 \Rightarrow f(x_1) < f(x_2)(y_1 < y_2)$, 即$x_1 \neq x_2, y_1 \neq y_2$。
-\begin{theorem}[反函数存在定理]\label{theorem:inverse-func-exists}
-    若$f(x)$在$D_f$上严格单调增加(减少), 则存在f的反函数$f^{-1}(y)$, $y \in R_f $,且$f^{-1}$也严格单调增加(减少)。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频31
-\begin{theorem}[反函数连续性定理]
-    假设$y = f(x)$在$[a, b]$上连续且严格单调增加, 设$f(a)=\alpha$, $f(b)=\beta$, 则反函数在$[\alpha, \beta]$上连续。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    $y = \sin(x)$, $y = \arcsin(x)$
-
-    $y = \cos(x)$, $y = \arccos(x)$
-
-    $y = \tan(x)$, $y = \arctan(x)$
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    $y = a^x(a > 0, a \neq 1)$, $y = \log_a(x)$
-
-    $y = x^n, n \in \mathbb{Z}$
-
-    $y = x^\alpha = e^{\ln x^\alpha} = e^{\alpha \ln x}$
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-讨论一个问题, $\funclim{u}{u_0}{f(x)} = A$, $\funclim{x}{x_0}{g(x)} = u_0$
-
-那么$\funclim{x}{x_0}{f\circ g(x)}$是否等于A?
-
-反例:
-\begin{equation*}
-    f(u) = \left\{
-        \begin{aligned}
-            0 & \quad u = 0 \\
-            1 & \quad u \neq 0 \\
-        \end{aligned}
-    \right.
-\end{equation*}
-\begin{equation*}
-    g(x) = x\sin\left(\frac{1}{x}\right)
-\end{equation*}
-则复合起来为:
-\begin{equation*}
-    f\circ g(x) \left\{
-        \begin{aligned}
-           0 & \quad x = \frac{1}{n\pi} \\
-           1 & \quad x \neq \frac{1}{n\pi} 
-        \end{aligned}
-    \right.
-\end{equation*}
-\begin{theorem}
-    $u = g(x)$在$x_0$连续, $g(x_0) = u_0$, $f(u)$在$u_0$连续。则$f\circ g$在$x_0$连续。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-
-\begin{proposition}
-    \[ \mathrm{sh}(x) = \frac{e^x-e^{-x}}{2}, \mathrm{ch}(x) = \frac{e^x+e^{-x}}{2} \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频32
-\begin{proposition}
-    对任意实数$\alpha$, $f(x) = x^\alpha$在$(0, +\infty)$上连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{theorem}
-    一切初等函数在它的定义域上连续。
-\end{theorem}
-
-\begin{proposition}
-    \[ \funclim{x}{0}{\left(\cos x\right)^{\frac{1}{x^2}}} \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    放射性物质的质量变化:
-
-    设$t = 0$时,物质的总量为$M = M(0)$, 放射的比例系数为k, 求时刻t的时候, $M(t)$为多少?
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频33
-\section{无穷小量与无穷大量的阶}
-无穷小量的阶:
-
-在数列极限的时候, 我们提及:$\mylim{n}{x_n} = 0$, $\collect{x_n}$---无穷小量。
-
-对于函数极限:
-$\funclim{x}{x_0}{f(x)} = 0$, 则称当$x \to x_0$时, $f(x)$是无穷小量。
-
-当$x \to x_0$, $u(x)$, $v(x)$都是无穷小量。
-
-\begin{definition}
-    $\funclim{x}{x_0}{\frac{u(x)}{v(x)}} = 0$, 则称当$x \to x_0$时, $u(x)$是$v(x)$的高阶无穷小量, 记为$u(x) = o(v(x)), (x \to x_0)$。    
-\end{definition}
-
-\begin{proposition}
-    \[ \funclim{x}{x_0}{\frac{1-\cos(x)}{x}}\] 
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    \[ \funclim{x}{0}{\frac{\tan(x) - \sin(x)}{x^2}} \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{definition}
-    若存在$A > 0$, 当$x$在$x_0$的某一去心邻域中$\collect{x|  0 < \left| x - x_0\right| < \rho}$,成立 $\left| \frac{u(x)}{v(x)} \right| \le A$, 则称当$x \to x_0$时, $\frac{u(x)}{v(x)}$是有界量, 记为$u(x) = O(v(x)), (x \to x_0)$。    
-\end{definition}
-
-\begin{proposition}
-    \[u(x) = x\sin\left(\frac{1}{x}\right), u(x) = O(v(x))\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{definition}
-    若$\exists 0 < a < A < +\infty$, 在$\collect{x|  0 < \left| x - x_0\right| < \rho}$中, $0 < a \le \left| \frac{u(x)}{v(x)} \right| \le A < +\infty$, 则称$u(x)$, $v(x)$在$x \to x_0$时是同阶无穷小量。
-\end{definition}
-
-\begin{proposition}
-    \[ u(x) = x(1+\sin\left( \frac{1}{x} \right)), v(x) = x, (x \to 0) \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    \[ u(x) = x(2+\sin\left( \frac{1}{x} \right)), v(x) = x, (x \to 0) \]
-\end{proposition}
-
-\begin{definition}
-    若$\funclim{x}{x_0}{\frac{u(x)}{v(x)}} = 1$, 则称当$x \to x_0$时, $u(x)$与$v(x)$是等价无穷小量, 记为$u(x)\sim v(x), (x \to x_0)$。
-\end{definition}
-\begin{proposition}
-    \[ \funclim{x}{0}{\frac{\sin(x)}{x}} = 1, \sin(x) \sim x(x \to x_0)\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \[ \funclim{x}{0}{\frac{1- \cos(x)}{\frac{1}{2}x^2}} \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \[ \funclim{x}{0}{\frac{\tan(x) - \sin(x)}{\frac{1}{2}x^3}} \]    
-\end{proposition}
-
-注:(1) 取$v(x) = (x - x_0)^k$可知$u(x)$是几阶的无穷小量。
-
-(2)$x \to 0^+$, $\frac{-1}{\ln (x)}$是正无穷小量。对任意的$\alpha > 0$, $\frac{-1}{\ln (x)}$是$x^\alpha$的低阶无穷小量, 即:
-\[ \funclim{x}{0^+}{\frac{\frac{-1}{\ln (x)}}{x^\alpha}} = +\infty\]
-这时候, 记$\frac{-1}{\ln (x)} = o(1), (x \to 0^+)$
-
-又比如$u(x) = \sin\left( \frac{1}{x}\right)(x \to 0)$, 不是无穷小量但是是有界量, 则记为$u(x) = O(1), (x \to 0)$。
-
-无穷大量的阶: 
-
-$\funclim{x}{x_0}{f(x)} = \infty (+\infty, -\infty)$, 则称当$x \to x_0$时, $f(x)$是(正, 负)无穷大量。
-
-\begin{definition}
-    假设$u(x)$, $v(x)$当$x \to x_0$时都是无穷大量, 若$\funclim{x}{x_0}{\frac{u(x)}{v(x)}} = \infty$, 这说明当$x \to x_0$时, $u(x)$是$v(x)$的高阶无穷大量。
-\end{definition}
-
-% 陈老视频34
-$n^n >> n! >> a^n(a > 1) >> n^\alpha(\alpha > 0) >> \ln^\beta(n)(\beta > 0)$
-
-\begin{proposition}
-    设$a > 1$, k是正整数, 求: 
-    \[ \funclim{x}{+\infty}{\frac{a^x}{x^k}} \]
-    \[ \funclim{x}{+\infty}{\frac{\ln^k(x)}{x}}\]
-\end{proposition}
-\begin{definition}
-    若存在$A > 0$, 在$\collect{x | 0 < \left| x - x_0\right| < \rho}$, 成立:
-    \[ \left| \frac{u(x)}{v(x)} \right| \le A \]
-    则称当$x \to x_0$时, $\frac{u(x)}{v(x)}$是有界量, 记为$u(x) = O(v(x)), (x \to x_0)$
-\end{definition}
-
-\begin{definition}
-    若存在$0 < a < A < +\infty$, 在$\collect{x | 0 < \left| x - x_0\right| < \rho}$, 成立:
-    \[ 0 < a \le \left| \frac{u(x)}{v(x)} \right| \le A < +\infty \]
-    则称当$x \to x_0$时, $u(x)$, $v(x)$是同阶无穷大量。
-\end{definition}
-若$\funclim{x}{x_0}{\frac{u(x){v(x)}}} = c \neq 0$, 则$u(x)$, $v(x)$一定是同阶无穷大量。
-\begin{definition}
-    若$\funclim{x}{x_0}{\frac{u(x)}{v(x)}} = 1$, 则称$u(x)$与$v(x)$是等价无穷大量, 记为$u(x) \sim v(x), (x \to x_0)$。
-\end{definition}
-
-\begin{proposition}
-    \[ u(x) = x^3\sin \left( \frac{1}{x} \right), v(x) = x^2\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \[ \funclim{x}{\frac{\pi}{2}^-}{\left( \frac{\pi}{2} - x \right)\tan(x)}\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-当$x \to 0^+$, $\frac{-1}{\ln(x)}$关于$x^\alpha$都是低阶无穷小量。
-\begin{proposition}
-    $x \to 0^+$, k为任意的正整数,$\left( \frac{-1}{\ln(x)}\right)^k$关于x是低阶无穷小量。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    当$x \to 0^+$, $e^{-\frac{1}{x}}$关于$x^k$是高阶无穷小量。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-等价量:
-
-$\sin(x) \sim x$
-\begin{proposition}
-    \[ \ln(1+x) \sim x, (x \to 0) \] 
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \[ e^x - 1 \sim x, (x \to 0)\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \[ \left( 1 + x\right)^\alpha \sim \alpha x, (x \to 0)\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \[ u(x) = \sqrt{x + \sqrt{x}}\]
-    讨论$x \to +\infty$和$x \to 0^+$时的阶数。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-\begin{proposition}
-    \[ v(x) = 2x^3 + 3x^5\]
-    讨论$x \to \infty$和$x \to 0$时的阶数。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频35
-\begin{theorem}
-    $u(x)$, $v(x)$, $w(x)$在$x_0$的某个去心邻域上有定义, 且
-    \[ \funclim{x}{x_0}{\frac{v(x)}{w(x)}} = 1, v(x) \sim w(x), (x \to x_0)\]
-    则
-    \begin{enumerate}
-        \item $\funclim{x}{x_0}{u(x)w(x)} = A \Longleftrightarrow \funclim{x}{x_0}{u(x)v(x)} = A$
-        \item $\funclim{x}{x_0}{\frac{u(x)}{w(x)}} = A \Longleftrightarrow \funclim{x}{x_0}{\frac{u(x)}{v(x)}} = A$
-    \end{enumerate}
-\end{theorem}
-
-\begin{proposition}
-    计算:
-    \[ \funclim{x}{0}{\frac{\ln(1+x^2)}{\left(e^{2x}-1\right)\tan(x)}}\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    计算:
-    \[ \funclim{x}{0}{\frac{\sqrt{1+x}-e^{\frac{x}{3}}}{\ln(1+2x)}}\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    计算:
-    \[ \funclim{x}{\infty}{x\left(\sqrt[3]{x^3+x}+\sqrt[3]{x^3-x}\right)}\]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    计算:
-    \[ \funclim{x}{0}{\frac{\sqrt{1+x}-1-\frac{x}{2}}{x^2}} \]
-\end{proposition}
-
-% 陈老视频36
-\section{闭区间上的连续函数}
-\begin{theorem}[有界性定理]
-    $f(x)$在闭区间$[a, b]$上连续, 则$f(x)$在闭区$[a, b]$上有界。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\begin{theorem}[最值定理]
-    $f(x)$在$[a, b]$上连续, 则$f(x)$必能在$[a, b]$上取到最大值和最小值, 即$\exists \xi, \eta \in [a, b]$, 使得$f(\xi) \le f(x) \le f(\eta), \forall x \in [a, b]$。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\begin{theorem}[零点存在定理]
-    $f(x)$在$[a, b]$上连续, 如果$f(a)f(b) < 0$, 则$\exists \xi \in [a, b]$, 使得$f(\xi) = 0$。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    \[ p(x) = 2x^3-3x^2-3x+2 \]
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    $f(x)$在$[a, b]$上连续, $f([a, b]) \subset [a, b]$, 则$\exists \xi \in [a, b]$, 使得$f(\xi) = \xi$($\xi$称为$f$的不动点)。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    $f(x)$在$(a, b)$上连续, $f((a, b)) \subset (a, b)$, 则是否$f$也有不动点?
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频37
-\begin{theorem}[中间值定理]
-    $f(x)$在闭区间$[a, b]$上连续, 则它一定能取到最大值M与最小值m之间的任何一个值。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\subsection{一致连续概念}
-\begin{definition}
-    X是某一区间, $f(x)$在X上连续, 是指$f(x)$在X上的每一点连续(在端点指右或者左连续)。
-
-    分析表述: $\forall x_0 \in X$, $\forall \epsilon > 0$, $\exists \delta > 0$, $\forall x \in X(\left| x - x_0 \right| < \delta)$, $\left| f(x) - f(x_0) \right| < \epsilon$
-\end{definition}
-$\delta = \delta(\epsilon, x_0)$, 能否找到对一切$x_0$适用的$\delta > 0$?
-
-若能找到这样的$\delta > 0$, 则有:
-
-$\forall \epsilon > 0$, $\exists \delta = \delta(\epsilon) > 0$, $\forall x', x'' \in X(\left| x' - x'' \right| < \delta)$: $\left| f(x') - f(x'') \right| < \epsilon$。
-
-问题: 这样的$\delta(\epsilon) > 0$是否一定能找到?不一定!
-
-存在$\delta(\epsilon) > 0 \Longleftrightarrow \inf_{x_0 \in X}\delta^*(\epsilon, x_0) > 0$ (令所有适用的$\delta(\epsilon, x_0)$中的最大者(或上确界)为$\delta^*(\epsilon, x_0)$)
-
-\begin{definition}[一致连续]
-    $f(x)$在区间X上有定义, 假如$\forall \epsilon > 0$,$\exists \delta > 0$, $\forall x', x'' \in X(\left| x' - x'' \right| < \delta)$: $\left| f(x') - f(x'') \right| < \epsilon$, 则称$f(x)$在区间X上一致连续。
-\end{definition}
-$f(x)$在X上一致连续 $\Rightarrow$ $f(x)$在区间X上连续
-
-\begin{proposition}
-    证明:
-    \[ y = \sin(x) \]
-    在$(-\infty, +\infty)$上一致连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    \[ f(x) = \frac{1}{x} \]
-    在区间$(0, 1)$上不是一致连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{theorem}
-    假设$f(x)$在区间X上有定义, 则$f(x)$在X上一致连续的充分必要条件是: 对任意点列$x'_n, x''_n \in X$, 只要$\mylim{n}{\left( x'_n - x''_n \right)} = 0$, 则有$\mylim{n}{\left(f(x'_n) - f(x''_n) \right)} = 0$。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频38
-\begin{proposition}
-    用以上的定理证明:
-    \[ f(x) = \frac{1}{x} \]
-    在区间$(0, 1)$上不是一致连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    证明:
-    \[  f(x) = \frac{1}{x} \]
-    在$(\eta, 1), 0 < \eta < 1$上一致连续。
-\end{proposition}
-
-\begin{proposition}
-    \[ f(x) = x^2 \]
-    在$(0, +\infty)$上非一致连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    \[ f(x) = x^2 \]
-    在$(0, A)$上一致连续。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{theorem}[Cantor定理]
-    若$f(x)$在闭区间$[a, b]$连续, 则$f(x)$在$[a, b]$上一致连续。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-\begin{theorem}
-    $f(x)$在有限开区间$(a, b)$连续, 则$f(x)$在开区间$(a,b)$上一致连续的充分必要条件是: $f(a^+)$, $f(b^-)$存在。
-\end{theorem}
-\begin{proof}
-    
-\end{proof}
-
-% 陈老视频39
-\chapter{微分}
-\section{微分和导数}
-\subsection{微分}
-考虑$y = f(x)$, 当$x \to x + \Delta x$时, $f(x) \to f(x+\Delta x)$, 令$\Delta y = f(x+\Delta x) - f(x)$。应该怎么简单地表示$\Delta y$?
-\begin{definition}[微分的定义]
-    $x_0 \in D_f$, 若存在只与$x_0$有关, 与$\Delta x$无关的$g(x_0)$,使得当$\Delta x \to 0$时:
-    \[ \Delta y = g(x_0)\Delta x + o(\Delta x) \]
-    则称$f(x)$在$x_0$可微。
-
-    若$f(x)$在区间X的每一点可微, 则称$f(x)$在区间X可微。
-
-    $g(x_0)\Delta x$称为$\Delta y$的线性主要部分。
-
-    $\Delta x \to 0$, 记$\Delta x$为$dx$, 若$f(x)$在$x$点可微, 则有$\Delta y = g(x)\Delta x + o(\Delta x), (\Delta x \to 0)$。则记$\Delta y$为$dy$, 并将上式写为$dy = g(x)dx $。
-\end{definition}
-
-\begin{proposition}
-    \[ y = f(x) = x^2 \]
-    对$\forall x \in (-\infty, +\infty)$, 求微分表示。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-\begin{proposition}
-    \[ y = f(x) = \sqrt[3]{x^2} \]
-    考虑$f$在$x_0 = 0$是否可微。
-\end{proposition}
-\begin{proof}
-    
-\end{proof}
-
-可微$\Rightarrow$连续
-\subsection{导数}
-$y = f(x)$在$x_0$可微, 则$\Delta y = g(x_0)\Delta x + o(\Delta x), (\Delta x \to 0)$, 那么:
-\[ \frac{\Delta y}{\Delta x} = g(x_0) + \frac{o(\Delta x)}{\Delta x} \]
-令$\Delta x \to 0$, 则
-\[ \funclim{\Delta x}{0}{\frac{\Delta y}{\Delta x}} = g(x_0)\]
-\begin{definition}
-    设$x_0 \in D_f$, 若极限
-    \[ \funclim{\Delta x}{0}{\frac{\Delta y}{\Delta x}} = \funclim{\Delta x}{0}{\frac{f(x+\Delta x) - f(x)}{\Delta x}} \]
-    存在, 则称$f(x)$在$x_0$可导, 记这个极限值为$f'(x_0)$(或$y'(x_0)$, $\left.\frac{dy}{dx}\right|_{x = x_0}$, $\left.\frac{df}{dx}\right|_{x = x_0}$)。
-\end{definition}
-$f(x)$可导的范围是$D_f$的子集, 于是我们可以得到在这子集上的$f(x)$的导函数, 记为$f'(x)$(或$y'(x)$, $\frac{dy}{dx}$, $\frac{df}{dx}$)。
-
-可微$\Rightarrow$可导, 且$f'(x_0) = g(x_0)$。
-
-可导是否一定可微?
-
-可导, 则:
-\[ \funclim{\Delta x}{0}{\frac{\Delta y}{\Delta x}} = f'(x_0)\]
-则:
-\[  \funclim{\Delta x}{0}{\left(\frac{\Delta y}{\Delta x} - f'(x_0) \right)} = 0 \]
-\[ \frac{\Delta y}{\Delta x} - f'(x_0) = o(1), (\Delta x \to 0) \]
-\[ \Delta y = f'(x_0)\Delta x + o(1)\Delta x \]
-\[ \Delta y = f'(x_0)\Delta x + o(\Delta x) \]
-即, 可导$\Rightarrow$可微(一元函数下)。
 \end{document}
