--- a/chapter4.tex
+++ b/chapter4.tex
@@ -133,3 +133,178 @@ $f(x)$在$x_0$处的导数为以下极限:
 $f(x)$在$(a, b)$上每一点可导, 则称$f(x)$在$(a, b)$区间上可导。
 
 $f(x)$在$(a, b)$上每一点可导, 在$x = a$上有右导数, $x = b$又左导数, 则称$f$在闭区间$[a, b]$上可导。
+
+% 陈老视频42
+\section{导数四则运算与反函数求导法则}
+\begin{proposition}
+    求
+    \[ y = \sin(x) \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+同理$y = \cos(x)$, $y'(x) = -\sin(x)$。
+
+\begin{proposition}
+    求
+    \[ y = \ln(x) \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求
+    \[ y = e^x \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求
+    \[ y = a^x \]
+    的导数。    
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求
+    \[ y = x^\alpha, \alpha \in \mathbb{R} \]
+    在定义域$(0, +\infty)$的导数。 
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{theorem}
+    若$f$, $g$在同一区间可导, 则$c_1f(x)+c_2g(x)$也在该区间可导, 且有:
+    \[ \left(c_1 f(x) + c_2 g(x) \right)' = c_1 f'(x) +c_2 g'(x) \]
+\end{theorem}
+
+\begin{theorem}
+    若$f$, $g$在同一区间可导, 则$f(x)\dot g(x)$也在该区间可导, 且有:
+    \[ \left(f(x) g(x) \right)' = f'(x) g(x) + f(x) g'(x) \]
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = x^3\cos(x) \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \frac{\sin(x)}{x} \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{theorem}
+    设$g(x)$在某一个区间可导, $g(x) \neq 0$, 则$\frac{1}{g(x)}$也在该区间可导, 且
+    \[ \left(\frac{1}{g(x)}\right)' = \frac{-g'(x)}{g^2(x)}\]
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \sec(x), \left(\sec(x) = \frac{1}{\cos(x)}\right) \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \csc(x), \left( \csc(x) = \frac{1}{\sin(x)} \right) \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{lemma}
+    $f$, $g$在同一区间可导, $g(x) \neq 0$, 则$\frac{f(x)}{g(x)}$在该区间可导, 且:
+    \[ \left( \frac{f(x)}{g(x)} \right)' = \frac{f'(x)g(x)-f(x)g'(x)}{g^2(x)}\]
+\end{lemma}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \tan(x) \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \cot(x) \]
+    的导数。
+\end{proposition}
+\begin{proof}
+    
+\end{proof}
+
+\begin{theorem}[反函数求导定理]
+    $f(x)$在$(a, b)${\bf 连续}并且{\bf 严格单调}并且{\bf 可导}, $f'(x) \neq 0$, $\alpha = \min\left( f(a^+), f(b^-)\right)$, $\beta = \max\left( f(a^+), f(b^-)\right)$, 则$f^{-1}(y)$在$(\alpha, \beta)$上可导, 且:
+    \[ \left( f^{-1} (y) \right)' = \frac{1}{f'(x)} \]
+\end{theorem}
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \arctan(x) \]
+    的导数。
+\end{proposition}    
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \arccot(x) \]
+    的导数。
+\end{proposition}    
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \arcsin(x) \]
+    的导数。
+\end{proposition}    
+\begin{proof}
+    
+\end{proof}
+
+\begin{proposition}
+    求:
+    \[ y = \arccos(x) \]
+    的导数。
+\end{proposition}    
+\begin{proof}
+    
+\end{proof}
