--- a/newcommand.tex
+++ b/newcommand.tex
@@ -4,3 +4,4 @@
 \newcommand{\mylinelim}[2]{\lim\limits_{#1 \to \infty} #2}
 \newcommand{\collect}[1]{\left\{ #1\right\}}
 \newcommand{\funclim}[3]{\lim_{#1 \to #2 } #3}
+\newcommand{\arccot}{\mathrm{arccot}}
